--- a/src/scss/kontramarka-theme.scss
+++ b/src/scss/kontramarka-theme.scss
@@ -1326,7 +1326,7 @@ small, .small {
                 .caption {
                     position: absolute;
                     top: 18px;
-                    // right: $container-padding-x;
+                    right: $container-padding-x;
                     max-width: 600px;
                     bottom: 56px;
                     left: $container-padding-x;
@@ -1349,7 +1349,7 @@ small, .small {
                 &-title {
                     display: inline-block;
                     max-width: 600px;
-                    max-height: 166px;
+                    max-height: 134px;
                     overflow: hidden;
                     margin-bottom: 0;
                     margin-right: auto;
